# nixos-firmware

./: .gitignore  build.sh  default.nix  flake.nix  generate.sh  nixos-firmware.cabal  shell.nix
.github/workflows/: build.yml
app/: Main.hs
src/: Generate.hs  Whence.hs
templates/: firmware-package.nix.ede  firmware-packages.nix.ede
