cabal-version:       2.4

name:                nixos-firmware
version:             0.1.0.0
synopsis:            Linux firmware for NixOS, split per driver.
-- description:
homepage:            https://github.com/pbogdan/nixos-firmware
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Piotr Bogdan
maintainer:          ppbogdan@gmail.com
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Whence
                     , Generate
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , aeson
                     , directory
                     , ede
                     , protolude
                     , regex-applicative
                     , split
                     , unordered-containers
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:        -Wall

executable nixos-firmware
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , nixos-firmware
                     , protolude
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:        -Wall
